Login and Signup fixed
Both CSS are fixed as well as fixed footer being misaligned "bug"

--- a/retroXchange/public/style.css
+++ b/retroXchange/public/style.css
@@ -24,7 +24,7 @@ a:visited {
 .page-layout {
     display: grid;
 
-    grid-template-rows: 4fr 30fr 30fr 10fr;
+    grid-template-rows: 1fr 9.7fr 1fr;
 }
 
 .about-us-page-layout {
@@ -36,8 +36,62 @@ a:visited {
 .contact-us-page-layout {
     display: grid;
 
-    grid-template-rows: 1fr 30fr 1fr;
+    grid-template-rows: 1fr 9.44fr 1fr;
 }
+
+
+
+.login-page-layout {
+    display: grid;
+
+    grid-template-rows: 1fr 9.7fr 1fr;
+}
+
+.signup-page-layout {
+    display: grid;
+
+    grid-template-rows: 1fr 8.7fr 1fr 1fr;
+}
+
+.signup-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    grid-row: 1;
+}
+
+.signup-form {
+    display: flex;
+    
+    justify-content: center;
+    align-items: center;
+
+    grid-row: 2;
+}
+
+.signup-form input {
+    display: flex;
+    flex-wrap: wrap;
+
+    margin: 10px;
+    border-radius: 10px;
+    border: 1px solid black;
+
+    font-size: 120%;
+}
+
+.contact-us-form input {
+    display: flex;
+    flex-wrap: wrap;
+
+    margin: 10px;
+    border-radius: 10px;
+    border: 1px solid black;
+
+    font-size: 120%;
+}
+
 
 .contact-us-header {
     display: flex;
@@ -54,16 +108,7 @@ a:visited {
     align-items: center;
 }
 
-.contact-us-form input {
-    display: flex;
-    flex-wrap: wrap;
 
-    margin: 10px;
-    border-radius: 10px;
-    border: 1px solid black;
-
-    font-size: 120%;
-}
 
 .contact-us-form textarea {
     display: flex;
@@ -76,6 +121,38 @@ a:visited {
 
     resize: none;
     font-size: 120%;
+}
+
+.login-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    grid-row: 1;
+}
+
+.login-form {
+    display: flex;
+    
+    justify-content: center;
+    align-items: center;
+}
+
+.login-form input {
+    display: flex;
+    flex-wrap: wrap;
+
+    margin: 10px;
+    border-radius: 10px;
+    border: 1px solid black;
+
+    font-size: 120%;
+}
+
+.account-option {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .header-grid-layout {
